--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "@types/node": "12.6.8",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
+    "@types/request": "^2.48.2",
+    "@types/request-promise": "^4.1.44",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4",
     "typescript": "3.5.3"
   },
   "scripts": {
